fix z-index on header dropdown

--- a/assets/styles/_components.scss
+++ b/assets/styles/_components.scss
@@ -103,7 +103,7 @@ footer {
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 1;
+  z-index: 2;
   padding: $pad-mrg-md-lg;
   justify-content: center;
   line-height: .85em;
